syntax = "proto3";

package proto;

import "entities.proto";
option go_package = "./service";
// Описание gRPC-сервиса
service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);
  rpc GetFeaturedCategories(GetFeaturedCategoriesRequest) returns (GetFeaturedCategoriesResponse);
  rpc GetFeaturedWithDeletedCategories(GetFeaturedCategoriesRequest) returns (GetFeaturedCategoriesResponse);
  rpc FindCategoryByName(FindCategoryByNameRequest) returns (FindCategoryByNameResponse);
  rpc FindCategoryByID(FindCategoryByIDRequest) returns (FindCategoryByIDResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse);
  rpc DeleteForeverCategory(DeleteCategoryByNameRequest) returns (DeleteCategoryResponse);
}

  message CreateCategoryRequest {// вот здесь лучше категорию передать!
    string name = 1;
    string description = 2;
  }
  message CreateCategoryResponse {
    Category category = 1;
    ErrorResponse error = 2;
  }


  message GetFeaturedCategoriesRequest {
    uint32 amount = 1;
  }

  message GetFeaturedCategoriesResponse {
    repeated Category categories = 1;
    ErrorResponse error = 2;
  }


  message FindCategoryByNameRequest {
    string name = 1;
  }

  message FindCategoryByNameResponse {
    Category category = 1;
    ErrorResponse error = 2;
  }


  message FindCategoryByIDRequest {
    uint32 id = 1;
  }

  message FindCategoryByIDResponse {
    Category category = 1;
    ErrorResponse error = 2;
  }

  message UpdateCategoryRequest {
    uint32 id = 1;
    string name = 2;
    string description = 3;
  }

  message UpdateCategoryResponse {
    Category category = 1;
    ErrorResponse error = 2;
  }


  message DeleteCategoryRequest {
    uint32 id = 1;
  }
  message DeleteCategoryResponse {
    ErrorResponse error = 1;
  }
 message DeleteCategoryByNameRequest {
    string name = 1;
  }
